# fg-ratings

./: .gitignore  LICENSE  README.md  Todo.md  cp_data_to_ui_assets.sh  pyproject.toml  ratings.py
backend/: collect_sfl_2023_results.py  conf.py  main.py  player_data.py  ratings.py  scrape_results.py  team_ratings.py  team_results.py
data/: country_code.json  country_code.tsv  player_data.tsv  players.tsv  ratings.tsv  results.tsv  team_ratings.tsv  team_results.tsv
docs/: 3rdpartylicenses.txt  404.html  index.html  main.018bd35e57d24e1a.js  main.0520a89858ad975f.js  main.0534f685cb4912ef.js  main.0d822a2959e13fd3.js  main.11da40c942a7520a.js  main.12206074f37995cd.js  main.17b0605a054e629d.js  main.1cbfcc0e0cd7403e.js  main.32d583c26043373e.js  main.3431930ac6d78d54.js  main.3829e74d1b6da98c.js  main.3864c0fef6f581bf.js  main.48c03834b8049b4b.js  main.4d743938961bbf91.js  main.4f98bbe618a12d08.js  main.5791c7bf585639a7.js  main.5846d2ccd673c76d.js  main.5b8d760a639efad5.js  main.611bfc11be26c4c0.js  main.629ca219e9264d69.js  main.6baa968ce5b0a242.js  main.6efbf83be4be34fb.js  main.747697e21b5eb762.js  main.76f0513943ddd149.js  main.7c07551d5459539b.js  main.8db38ee047e3df37.js  main.95bdb5b196198023.js  main.9626758f2a2ba038.js  main.9ba70c42425eecfa.js  main.9dbb5812e9074a67.js  main.a7c807b9776ae632.js  main.b8197697d704d120.js  main.bc497baa2048514d.js  main.c099617b1ba8dc31.js  main.c76e2f5bc832eed6.js  main.ca4360180931ce93.js  main.cbe10a8fabcd2749.js  (+11 more)
scripts/: cp_data_to_ui_assets.sh
ui/: angular.json  build.sh  deploy.sh  package-lock.json  package.json
(+126 files in other folders)
