[project]
name = "fg-ratings"
version = "0.1.0"
description = ""
authors = [{ name = "atilol", email = "ggrkssk@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = "^3.11"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.0.3"
selenium = "^4.11.2"
pysmashgg = "^1.2.0.1"
requests = "^2.32.4"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
